--- a/client/package.json
+++ b/client/package.json
@@ -13,5 +13,8 @@
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.2.1"
   }
 }
