--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "author": "togatoga",
   "license": "MIT",
   "dependencies": {
+    "cross-fetch": "^3.0.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
