--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,8 @@
   "description": "The manegement web site for codeforces problems",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "author": "togatoga",
   "license": "MIT",
