--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "babel-loader": "^8.0.5",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "react-bootstrap": "^1.0.0-beta.5",
     "redux-logger": "^3.0.6",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1"
