--- a/database/Makefile
+++ b/database/Makefile
@@ -3,7 +3,7 @@ GOBUILD=$(GOCMD) build
 GOCLEAN=$(GOCMD) clean
 GOTEST=$(GOCMD) test
 GOGET=$(GOCMD) get
-BINARY_NAME=server
+BINARY_NAME=database
 
 all: test build
 build:
