--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,10 @@
   "author": "togatoga",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^4.2.1",
     "cross-fetch": "^3.0.0",
     "react": "^16.7.0",
+    "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
