--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^16.7.0",
     "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.7.0",
+    "react-icons": "^3.4.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
