--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "author": "togatoga",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
     "bootstrap": "^4.2.1",
     "cross-fetch": "^3.0.0",
     "react": "^16.7.0",
