--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "NODE_ENV=development webpack",
+    "prod": "NODE_ENV=production webpack"
   },
   "author": "togatoga",
   "license": "MIT",
@@ -13,6 +14,7 @@
     "@material-ui/core": "^3.9.2",
     "bootstrap": "^4.2.1",
     "cross-fetch": "^3.0.0",
+    "js-yaml": "^3.12.2",
     "react": "^16.7.0",
     "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.7.0",
