--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
   "license": "MIT",
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/lab": "^3.0.0-alpha.30",
     "bootstrap": "^4.2.1",
     "cross-fetch": "^3.0.0",
     "js-yaml": "^3.12.2",
