--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "react-icons": "^3.4.0",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
